--- a/templates/fleet_quote_template.html
+++ b/templates/fleet_quote_template.html
@@ -92,22 +92,26 @@
       <th>QUOTE FROM:</th>
       <th>QUOTE FOR:</th>
     </tr>
-    <tr>
-      <td style="vertical-align: top;">
-        <strong>{{ dealership }}</strong><br>
-        {{ managerName }}<br>
-        {{ managerPhone }}<br>
-        {{ managerEmail }}
-      </td>
+      <tr>
+        <td style="vertical-align: top;">
+          {% set from_lines = dealership.replace('\r\n', '\n').replace('\r', '\n').split('\n') %}
+          <strong>{{ from_lines[0] }}</strong><br>
+          {% for line in from_lines[1:] %}
+            {{ line }}<br>
+          {% endfor %}
+          {% if managerName %}<strong>Sales Person:</strong> {{ managerName }}<br>{% endif %}
+          {% if managerEmail %}<strong>Email:</strong> {{ managerEmail }}<br>{% endif %}
+          {% if managerPhone %}<strong>Phone:</strong> {{ managerPhone }}<br>{% endif %}
+        </td>
         <td style="vertical-align: top;">
           {% set customer_lines = customer.replace('\r\n', '\n').replace('\r', '\n').split('\n') %}
           <strong>{{ customer_lines[0] }}</strong><br>
           {% for line in customer_lines[1:] %}
             {{ line }}<br>
           {% endfor %}
-          {% if customerContactName %}{{ customerContactName }}<br>{% endif %}
-          {% if customerPhone %}{{ customerPhone }}<br>{% endif %}
-          {% if customerEmail %}{{ customerEmail }}<br>{% endif %}
+          {% if customerContactName %}<strong>Attn:</strong> {{ customerContactName }}<br>{% endif %}
+          {% if customerEmail %}<strong>Email:</strong> {{ customerEmail }}<br>{% endif %}
+          {% if customerPhone %}<strong>Phone:</strong> {{ customerPhone }}<br>{% endif %}
         </td>
       </tr>
     </table>
