Improve logo alt text

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="logo" src="/static/logo.png" alt="Company logo">
+    <img id="logo" src="/static/logo.png" alt="Fleet Quote Generator logo">
     <h1>Fleet Quote Generator</h1>
     <p class="help-text">Enter quote data in JSON format using the sample below as a starting point.</p>
     <textarea id="jsonInput">{
